# relational-databases-orm-python

./: .env.example  .gitignore  LICENSE  README.md  alembic.ini  docker-compose.db.yaml  pyproject.toml  renovate.json5
.github/workflows/: test.yaml
alembic/: env.py
alembic/versions/: V20250605_2206__initial_migration_bd4faac5edc0.py
app/: __init__.py  config.py  database.py  main.py
app/models/: note.py
app/routers/: web.py
app/schemas/: note.py
app/services/: note_service.py
static/css/: styles.css
static/js/: app.js
templates/: base.html  index.html
templates/notes/: create.html  edit.html
tests/: conftest.py  factories.py
tests/integration/: __init__.py  test_database_setup.py  test_note_service_integration.py
tests/unit/: __init__.py  test_note_service.py  test_schemas.py
